<resources>

    <!-- Application -->
    <string name="app_name">Pro League</string>
    <string name="action_settings">Settings</string>
    <string name="app_version">App version: </string>

    <!-- Log In / Register -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>

    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_register">Register</string>

    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>

    <string name="link_login">Already have an account? Log in.</string>
    <string name="link_register">No account yet? Create one.</string>

    <!-- Profile -->
    <string name="logout">Log out</string>

    <!-- Tabbed View Titles -->
    <string name="title_matchday">MATCHDAY</string>
    <string name="title_leatue_table">LEAGUE TABLE</string>
    <string name="title_profile">PROFILE</string>

    <!-- Match Day -->
    <string name="end"> - END</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

</resources>
